fix(assertions): honor missing-element fail-fast option